fixed spacing between single line  items

--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ img{
       font-weight: bold;
     }
     .lecrepes {
-      margin-top: 1vh;
+      margin-top: 5vh;
     }
     .menusection {
       margin-left: 0;
